gateway/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: external-gateway-http
  namespace: default
  annotations:
    networking.gke.io/static-ip: ${static_ip_name}
spec:
  # This GatewayClass uses a global external Application Load Balancer.
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All 
  - name: grafana-port
    protocol: HTTP
    port: 8080 # Add this new listener
    allowedRoutes: { namespaces: { from: All } }
